结构调整，增加功能，代码对齐